MODKBEKBJ-675 Add checkstyle plugin